--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-    "name": "seam-theme",
+    "name": "seam-seam-but-different",
     "description": "Theme for seam-project.com",
-    "demo": "https://demo.ghost.io",
     "version": "1.0.0",
     "engines": {
         "ghost": ">=2.0.0",
         "ghost-api": "v2"
     },
+    "browser": true,
     "license": "MIT",
     "screenshots": {
         "desktop": "assets/screenshot-desktop.jpg",
         "mobile": "assets/screenshot-mobile.jpg"
     },
     "scripts": {
-        "dev": "parcel watch src/styles/index.less src/js/app.js --out-dir assets/built",
+        "dev": "parcel watch $npm_package_config_src_files --out-dir $npm_package_config_build_dir --out-file index.css app.js",
+        "build": "parcel build $npm_package_config_src_files --out-dir $npm_package_config_build_dir",
         "zip": "gulp zip",
         "test": "gscan .",
         "pretest": "gulp build",
@@ -49,12 +50,14 @@
         "autoprefixer": "9.5.1",
         "beeper": "1.1.1",
         "cssnano": "4.1.10",
+        "globby": "^9.2.0",
         "gscan": "2.4.1",
         "gulp": "4.0.0",
         "gulp-livereload": "4.0.1",
         "gulp-postcss": "8.0.0",
         "gulp-uglify": "3.0.2",
         "gulp-zip": "4.2.0",
+        "less": "^3.9.0",
         "postcss-color-function": "4.1.0",
         "postcss-custom-properties": "8.0.10",
         "postcss-easy-import": "3.0.0",
@@ -81,9 +84,13 @@
             "xl": {
                 "width": 2000
             }
-        }
+        },
+        "src_files": "src/styles/index.less",
+        "build_dir": "./assets"
     },
     "dependencies": {
-        "parcel-bundler": "^1.12.3"
+        "normalize.css": "^8.0.1",
+        "parcel-bundler": "^1.12.3",
+        "webfontloader": "^1.6.28"
     }
 }
